# AstroGuruAI

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
ai_engine/: __init__.py
astro_intelligence/: __init__.py  engine.py  types.py
astrology_engine/: __init__.py  engine.py
backend/: alembic.ini
benchmarks/: README.md  business.json  career.json  court_case.json  divorce.json  foreign_settlement.json  government_job.json  health.json  manifest.json  marriage.json  raj_yoga.json  wealth.json
case_learning/: __init__.py  constants.py  engine.py  types.py
case_learning_data/: README.md
consultation_layer/: __init__.py  constants.py  engine.py  types.py
docs/: CASE_LEARNING.md  CONSULTATION_LAYER.md  GOLDEN_CHART_COMPARISON_REPORT.md  PHASE3.md  REASONING_LAYER.md  RULE_STUDIO.md  VALIDATION_FRAMEWORK.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
horoscope_engine/: __init__.py  constants.py  engine.py  schemas.py  types.py
knowledge_brain/: __init__.py  loader.py  registry.py
knowledgebase/: README.md  manifest.json
kp_engine/: __init__.py  constants.py  engine.py  lords.py  types.py
lal_kitab_engine/: __init__.py  base.py  constants.py  context.py  engine.py  registry.py  types.py
naming_engine/: __init__.py  constants.py  engine.py  schemas.py  types.py
pdf_templates/: README.md
prompts/: README.md
reasoning_layer/: __init__.py  constants.py  engine.py  types.py
remedy_engine/: __init__.py  engine.py
reports/: README.md  __init__.py  builders.py  schemas.py  (+5 more)
(+792 files in other folders)
