[project]
name = "astroguruai"
version = "0.1.0"
description = "Production-grade astrology platform with AI-powered insights"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "astrology_engine", "ai_engine", "astro_intelligence", "case_learning", "consultation_layer", "horoscope_engine", "kp_engine", "lal_kitab_engine", "knowledge_brain", "naming_engine", "reasoning_layer", "remedy_engine", "reports", "rule_studio", "tests", "validation_framework"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["backend", "astrology_engine", "ai_engine"]

[[tool.mypy.overrides]]
module = ["google.generativeai.*", "redis.*", "swisseph.*"]
ignore_missing_imports = true
